MOSIP-12616 : New ports and URL pattern of reprocessor exposed for pause and resume story

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/reprocess-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/reprocess-dep.yaml
@@ -51,6 +51,15 @@ spec:
           containerPort: {{ .Values.services.reprocess.ports.hazelcastPort }}
         - name: verticle-port
           containerPort: {{ .Values.services.reprocess.ports.containerPort }}
+        - name: eventupdate-ebp
+          containerPort: {{ .Values.services.reprocess.ports.eventUpdateEventBusPort }}
+        - name: eventupdate-sp
+          containerPort: {{ .Values.services.reprocess.ports.eventUpdateServerPort }}
+        - name: workflowapi-ebp
+          containerPort: {{ .Values.services.reprocess.ports.workflowActionEventBusPort }}
+        - name: workflowapi-sp
+          containerPort: {{ .Values.services.reprocess.ports.workflowActionServerPort }}
+
 
 #        readinessProbe:
 #          httpGet:
