--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -47,21 +47,57 @@ versions:
 
     regproc:
       preprocstagegroup:
-        'regproc-preproc-stage-group': 'mosipid/pre-processor-stage-group:1.1.5'
+        'regproc-preproc-stage-group': 'mosipdev/pre-processor-stage-group:1.1.5'
       coreprocstagegroup:
-        'regproc-preproc-stage-group': 'mosipid/core-processor-stage-group:1.1.5'
+        'regproc-preproc-stage-group': 'mosipdev/core-processor-stage-group:1.1.5'
       postprocstagegroup:
-        'regproc-preproc-stage-group': 'mosipid/post-processor-stage-group:1.1.5'
+        'regproc-preproc-stage-group': 'mosipdev/post-processor-stage-group:1.1.5'
       camel:
         'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:1.1.5'
+      notification: 
+        'regproc-securezone-notification-stage': 'mosipdev/pre-processor-stage-group:1.1.5'
+      uploader:
+        'regproc-packet-uploader-stage': 'mosipdev/pre-processor-stage-group:1.1.5'
+      quality:
+        'regproc-quality-checker-stage': 'mosipdev/pre-processor-stage-group:1.1.5'
+      validator:
+        'regproc-packet-validator-stage': 'mosipdev/pre-processor-stage-group:1.1.5'
+      classifier:
+        'regproc-packet-classifier-stage': 'mosipdev/pre-processor-stage-group:1.1.5'
+      osi:
+        'regproc-osi-validator-stage': 'mosipdev/pre-processor-stage-group:1.1.5'
+      demo:
+        'regproc-demo-dedupe-stage': 'mosipdev/core-processor-stage-group:1.1.5'
+      bio:
+        'regproc-bio-dedupe-stage': 'mosipdev/core-processor-stage-group:1.1.5'
+      bioauth:
+        'regproc-biometric-authentication-stage': 'mosipdev/core-processor-stage-group:1.1.5'
+      abishandler:
+        'regproc-abis-handler-stage': 'mosipdev/core-processor-stage-group:1.1.5'
+      abismid:
+        'regproc-abis-middleware-stage': 'mosipdev/core-processor-stage-group:1.1.5'
+      manual:
+        'regproc-manual-verification-stage': 'mosipdev/core-processor-stage-group:1.1.5'
+      external:
+        'regproc-external-stage': 'mosipdev/pre-processor-stage-group:1.1.5'
       eis: 
         'regproc-external-integration-service': 'mosipdev/registration-processor-external-integration-service:1.1.5'
+      uin:
+        'regproc-uin-generator-stage': 'mosipdev/core-processor-stage-group:1.1.5'
+      msg:
+        'regproc-message-sender-stage': 'mosipdev/post-processor-stage-group:1.1.5'
+      print:
+        'regproc-printing-stage': 'mosipdev/post-processor-stage-group:1.1.5'
       trans:
         'regproc-registration-transaction-service': 'mosipdev/registration-processor-registration-transaction-service:1.1.5'
+      reprocess:
+        'regproc-reprocessor-stage': 'mosipdev/core-processor-stage-group:1.1.5'
 
     dmzregproc:  
       initstagegroup:
-        'regproc-init-stage-group': 'mosipid/init-stage-group:1.1.5'
+        'regproc-init-stage-group': 'mosipdev/init-stage-group:1.1.5'
+      receiver:
+        'regproc-packet-receiver-stage': 'mosipdev/init-stage-group:1.1.5'
       camel:
         'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:1.1.5'
       status:
