Incorporated review comments

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-svc.yaml
@@ -8,4 +8,4 @@ spec:
   - port: {{ .Values.services.receiver.ports.servicePort }}
     targetPort: {{ .Values.services.receiver.ports.containerPort }}
   selector:
-    app: {{ .Values.services.receiver.serviceName }} 
+    app: {{ .Values.services.initstagegroup.serviceName }} 
