--- a/deployment/sandbox-v2/helm/charts/regproc/templates/notification-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/notification-svc.yaml
@@ -8,4 +8,4 @@ spec:
   - port: {{ .Values.services.notification.ports.servicePort }}
     targetPort: {{ .Values.services.notification.ports.containerPort }}
   selector:
-    app: {{ .Values.services.notification.serviceName }} 
+    app: {{ .Values.services.preprocstagegroup.serviceName }} 
