[MOSIP-12749] added new service admin hotlist

--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -146,6 +146,8 @@ versions:
         'admin-service': 'mosipdev/admin-service:develop'
       ui:
         'admin-ui': 'mosipdev/admin-ui:develop'
+      hotlist:
+        'admin-hotlist-service': 'mosipdev/hotlist-service:develop'
     
     packetmanager:
       service:
