--- a/deployment/sandbox-v2/podconfig.yml
+++ b/deployment/sandbox-v2/podconfig.yml
@@ -394,6 +394,13 @@ podconfig:
       minReadySeconds: 10
       java_opts: "-Xms500M -Xmx500M"
 
+    hotlist:
+      replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+      java_opts: "-Xms500M -Xmx500M"
+
   artifactory:
     service:
       replicas: 1
