--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -137,7 +137,9 @@ versions:
       service:
         'admin-service': 'mosipid/admin-service:1.1.5'
       ui:
-        'admin-ui': 'mosipid/admin-ui:1.1.5'
+        'admin-ui': 'mosipdev/admin-ui:develop'
+      hotlist:
+        'admin-hotlist-service': 'mosipdev/hotlist-service:develop'
     
     packetmanager:
       service:
